Fix light/dark mode button issues

--- a/css/Default.css
+++ b/css/Default.css
@@ -16,3 +16,7 @@ body {
     word-wrap: break-word;
     text-overflow: clip;
 }
+
+.Hidden {
+    display: none;
+}
